Fixing the footer header align

--- a/slab-data-warehouse/webroot/css/footer.css
+++ b/slab-data-warehouse/webroot/css/footer.css
@@ -12,36 +12,71 @@ footer {
   background-image: url(../images/Group\ 64.png),
                     url(../images/Logo.jpg);
   background-repeat: no-repeat;
-  background-position: 52% 85%, 0% 37%;
+  background-position: 52% 85%, 0% 34%;
   background-size: 60px 60px, 60px 40px;
 
 }
-
-footer div:nth-of-type(1) {
-  display: grid;
-  grid-column: 1 / 5;
+footer header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  width: 1000px;
 }
 
-footer div:nth-of-type(2) {
+
+footer header > #button ul {
+  display: inline-flex;
+  align-items: flex-end;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+footer header > #button li {
+  margin-inline-end: 5rem;
+}
+footer header > #button .learn {
+  padding: 2rem;
+  color: #ffffff;
+  background-color: #F063B8;
+  border-radius: 50px;
+  text-align: center;
+}
+footer header > #button .demo::after {
+  content: '→';
+  margin-inline-start: 1rem;
+}
+
+footer header > #button .demo {
+  padding: 2rem;
+  background-color: #FFFFFF;
+  box-shadow: 0px 5px 5px rgba(75, 93, 104, 0.1);
+  border-radius: 50px;
+}
+
+
+footer div:nth-of-type(1) {
   grid-column: 1 / 2 ;
   margin-block-start: 0rem;
 }
-footer div:nth-of-type(2) p:nth-of-type(1) {
+footer div:nth-of-type(1) p:nth-of-type(1) {
   margin-block-start: 4rem;
 }
 
-footer div:nth-of-type(2) h5{
+footer div:nth-of-type(1) h5{
    margin-inline-start: 5rem;
 }
-footer div:nth-of-type(3) {
+footer div:nth-of-type(2) {
    grid-column: 2 / 3;
 }
 
-footer div:nth-of-type(4) {
+footer div:nth-of-type(3) {
   grid-column: 3 / 4;
 }
 
-footer div:nth-of-type(5) {
+footer div:nth-of-type(4) {
   grid-column: 4 / 5;
   margin-block-start: 1.5rem;
   background-image: url(../images/SM.png);
@@ -50,7 +85,7 @@ footer div:nth-of-type(5) {
   background-position: 0% 10%;
 }
 
-footer div:nth-of-type(6) {
+footer div:nth-of-type(5) {
   grid-column: 1 / 3;
 
 }
